2010-10-11:
	*BoneTool(Helper): A GUI for the rig resource in its early stages.
2010-10-09:
SkinToneResource:
	*Fixed error in Value string
RigResource:
	*Refactoring
2010-10-05:
RigResource:
	*Added default values
2010-09-30:
New Wrappers:
	*AnimatedTextureResource
ObjectGeometryResource:
	*Filtered some version dependent content fields
	*Added "VbufType" to "Value" string	
EffectResource:
	*Filtered some version dependent content fields
RigResource:
	*Fixed issue with writing body rigs
2010-09-11:
EffectResource:
	*Rewrote to handle file sections
2010-09-10:
RigResource:
	*Removed platform-specific code to resolve problem in Windows7
EffectResource:
	*Updated spec(thanks to Rick's source code)
ColourInfoResource:
	*fixed typo that stopped type 0x06326213 from being handled
